--- a/experience/index.html
+++ b/experience/index.html
@@ -141,8 +141,13 @@
   </header>
 
   <article>
+
+    <h4 id="Data Scientist---fulltime--neurosensum"><em>Data Scientist</em> | <a href="https://neurosensum.com/">NeuroSensum</a></h4>
+<p><strong>February 2021 - Present | Gurgaon, India</strong> <br />
+</p>
+
     <h4 id="data-science-intern--researchwire"><em>Data Science Intern</em> | <a href="researchwire.in">ResearchWire</a></h4>
-<p><strong>August 2020 - Present | Mumbai, India</strong> <br />
+<p><strong>August 2020 - December 2020 | Mumbai, India</strong> <br />
 • Work revolves around automation of lengthy procedures of patent analysis.</p>
 
 <h4 id="computer-vision-engineer---intern--carscan"><em>Computer Vision Engineer - Intern</em> | <a href="carscan.ai">cARscan</a></h4>
