--- a/reading-group/index.html
+++ b/reading-group/index.html
@@ -42,10 +42,9 @@
           <div class="collapse navbar-collapse text-right" id="navbarNav">
             <ul class="navbar-nav ml-auto flex-nowrap">
               <li class="nav-item"><a class="nav-link" href="/">about</a></li>
-              <li class="nav-item"><a class="nav-link" href="/blog/">blog</a></li>
               <li class="nav-item"><a class="nav-link" href="/experience/">experience</a></li>
-              <li class="nav-item"><a class="nav-link" href="/projects/">projects</a></li>
-              <li class="nav-item active"><a class="nav-link" href="/vision-language-talks/">reading group</a></li>
+              <li class="nav-item"><a class="nav-link" href="/publications/">research</a></li>              
+              <li class="nav-item active"><a class="nav-link" href="/reading-group/">reading group</a></li>
             </ul>
           </div>
         </div>
@@ -69,7 +68,7 @@
               <div class="talk-details">
                 <h5>Graph-enhanced Large Language Models</h5>
                 <p><strong>Author:</strong> Fangru Lin, DPhil NLP @UniversityOfOxford</p>
-                <p><strong>TL;DR:</strong> TL;DR: This talk presents "Plan Like a Graph" (PLaG), a novel technique that integrates graphs with natural language prompts to enhance large language models' (LLMs) performance in asynchronous plan reasoning tasks. Despite improvements, challenges persist as task complexity increases, highlighting the limitations of current LLMs in simulating digital devices. </p>
+                <p><strong>TL;DR:</strong> This talk presents "Plan Like a Graph" (PLaG), a novel technique that integrates graphs with natural language prompts to enhance large language models' (LLMs) performance in asynchronous plan reasoning tasks. Despite improvements, challenges persist as task complexity increases, highlighting the limitations of current LLMs in simulating digital devices. </p>
                 <p><strong>Keywords:</strong> Graph-enhanced LLMs, asynchronous planning, Plan Like a Graph (PLaG)</p>
               </div>
             </div>
