--- a/index.html
+++ b/index.html
@@ -173,6 +173,16 @@
         <div class="table-responsive">
           <table class="table table-sm table-borderless">
             <tr>
+              <th scope="row">Dec 2024</th>
+              <td><strong>🏆 Outstanding Paper Award!</strong> Our paper on Miscalibration in Semisupervised Learning won the outstanding paper award at <strong>MLRC 2025</strong>! 🎉</td>
+            </tr>
+            
+            <tr>
+              <th scope="row">Dec 2024</th>
+              <td>Our paper <strong>Do not trust what you trust: Miscalibration in Semisupervised Learning</strong> has been accepted and published in <strong>Transactions on Machine Learning Research (TMLR)</strong>!</td>
+            </tr>
+            
+            <tr>
               <th scope="row">March 2025</th>
               <td><strong>Computer Vision Talks</strong> expanded to include discussions on <em>Language research</em> - now we have <strong>Vision Language Talks</strong>.</td>
             </tr>
