--- a/publications/index.html
+++ b/publications/index.html
@@ -136,7 +136,9 @@
     <p>
       <strong>Shambhavi Mishra</strong>, Balamurali Murugesan, Ismail Ben Ayed, Marco Pedersoli, Jose Dolz <br />
       Explores miscalibration in pseudo-label-based SSL methods, exposing overconfident predictions and proposing a novel approach for better-calibrated models. 
-      Read the paper: <a href="https://openreview.net/forum?id=1WqLLYgBNt&noteId=fgA2Wp9Zzq" target="_blank">TMLR</a>.
+      <strong>🏆 Outstanding Paper Award at MLRC 2025!</strong><br />
+      Read the paper: <a href="https://tmlr.infinite-conf.org/paper_pages/1WqLLYgBNt.html" target="_blank">TMLR</a> | 
+      <a href="https://reproml.org/proceedings/" target="_blank">MLRC 2025</a>
     </p>
 
 <h4 id="extended-abstract--trackrecsign--wiml-neurips-2020-">Extended Abstract : <strong>TrackRecSign</strong> | WiML, NeurIPS 2020 <br /></h4>
