--- a/reading-group/index.html
+++ b/reading-group/index.html
@@ -45,6 +45,7 @@
               <li class="nav-item"><a class="nav-link" href="/experience/">experience</a></li>
               <li class="nav-item"><a class="nav-link" href="/publications/">research</a></li>              
               <li class="nav-item active"><a class="nav-link" href="/reading-group/">reading group</a></li>
+              <li class="nav-item"><a class="nav-link" href="/blog/">blog</a></li>
             </ul>
           </div>
         </div>
