Fix navigation: move blog link to rightmost position across all pages

--- a/reading-group/index.html
+++ b/reading-group/index.html
@@ -215,7 +215,7 @@
                 </a>
                 <div class="talk-details">
                   <h5>Mathematical Models of Brain Connectivity and Behavior</h5>
-                  <p><strong>Author:</strong> Niharika S. D’Souza @IBM Research, Almaden</p>
+                  <p><strong>Author:</strong> Niharika S. D'Souza @IBM Research, Almaden</p>
                   <p><strong>TL;DR:</strong> This presentation explores the use of mathematical and machine learning models to link the structural and functional organization of the brain with behavioral patterns, aiming to predict clinical severity from neuroimaging data.</p>
                   <p><strong>Keywords:</strong> Brain Connectivity, Behavior Prediction, Machine Learning, Neuroimaging, Clinical Severity</p>
                 </div>
